@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-11T00:53:29Z",
+  "timestamp" : "2024-05-11T08:14:27Z",
   "count_outdated" : 1110,
   "uniques_outdated" : 645,
-  "count" : 1115,
-  "uniques" : 649,
+  "count" : 1116,
+  "uniques" : 650,
   "clones" : [
     {
       "timestamp": "2024-05-06T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-05-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
