@@ -1,5 +1,5 @@
 {
-  "count": 5,
+  "count": 6,
   "uniques": 3,
   "clones": [
     {
@@ -16,6 +16,11 @@
       "timestamp": "2024-05-10T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-05-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
